# the-editor

./: #editor.log#  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  CLAUDE.md  COMMAND_QUICK_REFERENCE.md  Cargo.toml  DOCUMENTATION_INDEX.md  EDITOR_PATTERNS.md  FONT_BUG.md  INSTALL.md  MISSING_COMMANDS.md  PLAN.md  README.md  a.out  architecture.md  base16_theme.toml  build.zig  build.zig.zon  flake.nix  hello.txt  languages.toml  main  main.c  main.go  new_editor.md  perf.data.old  result  rust-toolchain.toml  save-test.txt  search.txt  test-character-replacement.txt  theme.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: common.rs  syntax_edits.rs  syntax_interpolate.rs  syntax_update.rs
the-config/: Cargo.toml  lib.rs
the-config/fallback/: Cargo.toml
the-config/src/: lib.rs
the-config/template/: Cargo.toml
the-core/: Cargo.toml  chars.rs  grapheme.rs  lib.rs  line_ending.rs  uri.rs
the-core/benches/: chars.rs  grapheme.rs  line_ending.rs
the-default/: Cargo.toml  assembly.rs  buffer_tabs.rs  command.rs  command_palette.rs  command_registry.rs  command_types.rs  completion_menu.rs  context_menu.rs  defaults.rs  dispatch.rs  extension_state.rs  extensions.rs  fff_backend.rs  file_picker.rs  file_tree.rs  global_search.rs  inline_completion.rs  input.rs  key_pipeline.rs  keymap.rs  lib.rs  message_bar.rs  open_items.rs  overlay_layout.rs  pending.rs  plugin.rs  render_pass.rs  render_waker.rs  search_prompt.rs  signature_help.rs  statusline.rs  theme_catalog.rs
the-default/increment/: date_time.rs  integer.rs
the-default/tests/: working_directory.rs
the-editor/: Cargo.toml  application.rs  cli.rs  editor.rs  event.rs  expansion.rs  health.rs  input.rs  key_encode.rs  lsp.rs  main.rs  profiling.rs  snippets.rs  terminal_manager.rs
the-editor-event/: Cargo.toml  cancel.rs  lib.rs  redraw.rs  registry.rs  runtime.rs
the-editor-loader/: Cargo.toml  config.rs  grammar.rs  lib.rs
the-editor-renderer/: Cargo.toml  color.rs  error.rs  event.rs  lib.rs  rect.wgsl  renderer.rs  text.rs  text_cache.rs
the-editor/acp/: client.rs  commands.rs  context.rs  handle.rs  mod.rs  permissions.rs  session.rs
the-editor/core/: animation.rs  auto_pairs.rs  case_conversion.rs  chars.rs  clipboard.rs  command_line.rs  command_registry.rs  commands.rs  comment.rs  config.rs  context_fade.rs  diagnostics.rs  diff.rs  doc_formatter.rs  document.rs  editor_config.rs  expansion.rs  file_watcher.rs  fuzzy.rs  global_search.rs  grapheme.rs  graphics.rs  history.rs  indent.rs  info.rs  layout.rs  line_ending.rs  lsp_commands.rs  macros.rs  match_brackets.rs  mod.rs  movement.rs  object.rs  position.rs  quick_slots.rs  registers.rs  selection.rs  special_buffer.rs  surround.rs  syntax.rs  (+9 more)
the-editor/file_manager/: buffer.rs  format.rs  mod.rs  operations.rs
the-editor/handlers/: auto_reload.rs  completion.rs  completion_path.rs  completion_request.rs  completion_request_helpers.rs  completion_resolve.rs  diagnostics.rs  explorer.rs  explorer_reveal.rs  hover.rs  lsp.rs  mod.rs  signature_help.rs  theme_reload.rs  word_index.rs
the-editor/increment/: date_time.rs  integer.rs  mod.rs
the-editor/keymap/: default.rs  macros.rs  mod.rs
the-editor/lsp/: client.rs  file_event.rs  file_operations.rs  jsonrpc.rs  transport.rs
the-editor/snippets/: active.rs  elaborate.rs  parser.rs  render.rs
the-editor/ui/: compositor.rs  editor_view.rs  explorer.rs  file_icons.rs  gutter.rs  inline_diagnostic_animation.rs  job.rs  mod.rs  popup_positioning.rs  render_cache.rs  render_commands.rs  text_decorations.rs  tree.rs
the-event/: Cargo.toml  cancel.rs  debounce.rs  hook.rs  lib.rs  redraw.rs  registry.rs  status.rs  test.rs
the-ffi/: Cargo.toml  build.rs  lib.rs  lsp_broker.rs
the-ffi/include/: module.modulemap  the_editor_ffi.h
the-ffi/src/: lib.rs
the-lib/: Cargo.toml  app.rs  auto_pairs.rs  base16_theme.toml  case_convention.rs  clipboard.rs  command.rs  command_line.rs  comment.rs  diagnostics.rs  diff.rs  docs_markdown.rs  document.rs  editor.rs  fuzzy.rs  history.rs  indent.rs  input.rs  lib.rs  match_brackets.rs  messages.rs  movement.rs  object.rs  pi_bridge.rs  position.rs  registers.rs  search.rs  selection.rs  split_tree.rs  surround.rs  syntax.rs  syntax_async.rs  text_object.rs  theme.toml  transaction.rs  view.rs
the-lib/benches/: transaction.rs
the-lib/render/: doc_formatter.rs  grapheme.rs  graphics.rs  gutter.rs  highlight_adapter.rs  inline_diagnostics.rs  mod.rs  overlay.rs  plan.rs  text_annotations.rs  text_format.rs  theme.rs  ui.rs  ui_theme.rs  visual_position.rs
the-lib/syntax/: config.rs  highlight_cache.rs  indent_query.rs  resources.rs  runtime_loader.rs
the-loader/: Cargo.toml  build.rs  config.rs  grammar.rs  lib.rs
the-lsp/: Cargo.toml  capabilities.rs  command.rs  diagnostics.rs  editing.rs  event.rs  jsonrpc.rs  lib.rs  navigation.rs  progress.rs  runtime.rs  text_sync.rs  transport.rs
the-lsp-types/: Cargo.toml
the-lsp-types/types/: call_hierarchy.rs  code_action.rs  code_lens.rs  color.rs  completion.rs  document_diagnostic.rs  document_highlight.rs  document_link.rs  document_symbols.rs  file_operations.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  inline_completion.rs  inline_value.rs  linked_editing.rs  lsif.rs  mod.rs  rename.rs  (+14 more)
the-renderer/: Cargo.toml  blur.wgsl  color.rs  error.rs  event.rs  image.rs  image.wgsl  lib.rs  powerline_glyphs.rs  rect.wgsl  renderer.rs  svg_icon.rs  text.rs  text_cache.rs
the-runtime/: Cargo.toml  clipboard.rs  file_watch.rs  file_watch_consumer.rs  file_watch_reload.rs  lib.rs
the-stdx/: Cargo.toml  env.rs  faccess.rs  lib.rs  path.rs  range.rs  rope.rs
the-term/: Cargo.toml  config_cli.rs  ctx.rs  dispatch.rs  docs_panel.rs  input.rs  main.rs  pi_bridge.rs  picker_layout.rs  render.rs  terminal.rs  theme.rs  undercurl_backend.rs
the-terminal/: Cargo.toml  build.rs  build.zig  build.zig.zon  config.rs  event.rs  lib.rs  renderer.rs  terminal.rs  test_utils.rs  wrapper.zig
the-test/: Cargo.toml
the-vcs/: Cargo.toml  diff.rs  git.rs  jj.rs  lib.rs  status.rs
(+485 files in other folders)
