[workspace]
members  = [ "the-core", "the-dispatch" ]
resolver = "3"

[workspace.lints.rust]
# Keep unused variable warnings, but allow unused code definitions
dead_code        = "allow"
unused_variables = "warn"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.metadata.crane]
name = "the-editor"

[workspace.dependencies]
ropey                    = "1.6.1"
unicode-general-category = "1.0"
unicode-linebreak        = "0.1.5"
unicode-properties       = { version = "0.1.4", default-features = false, features = ["emoji"] }
unicode-segmentation     = "1.12.0"
unicode-width            = "0.2.1"
