[workspace]
members  = [ "the-core", "the-dispatch" , "the-stdx"]
resolver = "3"

[workspace.lints.rust]
# Keep unused variable warnings, but allow unused code definitions
dead_code        = "allow"
unused_variables = "warn"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.metadata.crane]
name = "the-editor"

[workspace.dependencies]
ropey                    = "1.6.1"
unicode-general-category = "1.0"
unicode-linebreak        = "0.1.5"
unicode-properties       = { default-features = false, features = [ "emoji" ], version = "0.1.4" }
unicode-segmentation     = "1.12.0"
unicode-width            = "0.2.2"
etcetera                 = "0.10"
bitflags                 = "2.9"
dunce                    = "1.0"
once_cell                = "1.21"
regex-automata           = "0.4.9"
regex-cursor             = "0.1.5"
which                    = "8.0"
tempfile                 = "3.20.0"
