[workspace]
members  = [ "the-core", "the-dispatch", "the-lib", "the-stdx" ]
resolver = "3"

[workspace.lints.rust]
# Keep unused variable warnings, but allow unused code definitions
dead_code        = "allow"
unused_variables = "warn"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.metadata.crane]
name = "the-editor"

[workspace.dependencies]
bitflags                 = "2.9"
dunce                    = "1.0"
etcetera                 = "0.10"
eyre                     = "0.6"
once_cell                = "1.21"
parking_lot              = "0.12"
regex                    = "1"
regex-automata           = "0.4.9"
regex-cursor             = "0.1.5"
ropey                    = "1.6.1"
smallvec                 = "1.15"
smartstring              = "1.0.1"
tempfile                 = "3.20.0"
thiserror                = "2.0"
nucleo                   = "0.5.0"
tracing                  = "0.1"
tree-house               = { default-features = false, git = "https://github.com/misterclayt0n/tree-house" }
unicode-general-category = "1.0"
unicode-linebreak        = "0.1.5"
unicode-properties       = { default-features = false, features = [ "emoji" ], version = "0.1.4" }
unicode-segmentation     = "1.12.0"
unicode-width            = "0.2.2"
url                      = { git = "https://github.com/servo/rust-url" }
which                    = "8.0"
