[package]
name              = "the-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default       = [ "unicode-lines" ]
unicode-lines = [ "ropey/unicode_lines" ]

[lib]
path = "lib.rs"

[dependencies]
ropey                              = { workspace = true }
unicode-general-category.workspace = true
unicode-segmentation.workspace     = true
unicode-width.workspace            = true       

