[package]
name              = "the-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default       = [ "unicode-lines" ]
unicode-lines = [ "ropey/unicode_lines" ]

[lib]
path = "lib.rs"

[dependencies]
eyre.workspace                     = true
ropey                              = { workspace = true }
thiserror.workspace                = true
unicode-general-category.workspace = true
unicode-linebreak.workspace        = true
unicode-properties.workspace       = true
unicode-segmentation.workspace     = true
unicode-width.workspace            = true
url.workspace                      = true

the-stdx = { path = "../the-stdx" }

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name    = "grapheme"
harness = false

[[bench]]
name    = "chars"
harness = false
