[package]
name    = "the-default"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
ignore       = { workspace = true }
nucleo       = { workspace = true }
smallvec     = "1.13.2"
the-core     = { path = "../the-core" }
the-dispatch = { path = "../the-dispatch" }
the-lib      = { path = "../the-lib" }
the-loader   = { path = "../the-loader" }
the-stdx     = { path = "../the-stdx" }

[features]
cow-handlers     = [ "the-dispatch/cow-handlers" ]
default          = [  ]
dynamic-registry = [ "the-dispatch/dynamic-registry" ]
