[package]
name    = "the-default"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
chrono       = "0.4"
grep-regex   = { workspace = true }
grep-searcher = { workspace = true }
ignore       = { workspace = true }
nucleo       = { workspace = true }
regex        = { workspace = true }
ropey        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
smallvec     = "1.13.2"
the-core     = { path = "../the-core" }
the-dispatch = { path = "../the-dispatch" }
the-lib      = { path = "../the-lib" }
the-lsp      = { path = "../the-lsp" }
the-loader   = { path = "../the-loader" }
the-vcs      = { path = "../the-vcs" }
the-stdx     = { path = "../the-stdx" }
toml         = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
cow-handlers     = [ "the-dispatch/cow-handlers" ]
default          = [  ]
dynamic-registry = [ "the-dispatch/dynamic-registry" ]
