[package]
name              = "the-editor-loader"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow               = "1"
cc                   = { version = "1" }
etcetera             = "0.10"
log                  = "0.4"
once_cell            = "1.21"
serde                = { features = [ "derive" ], version = "1.0" }
tempfile.workspace   = true
the-editor-stdx      = { path = "../the-editor-stdx" }
threadpool           = { version = "1.0" }
toml.workspace       = true
tree-house.workspace = true
