[package]
name              = "the-editor-renderer"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bytemuck.workspace   = true
env_logger.workspace = true
pollster.workspace   = true
thiserror.workspace  = true
wgpu.workspace       = true
wgpu_text.workspace  = true
winit.workspace      = true
the-editor-event = { path = "../the-editor-event" }
