[package]
name              = "the-editor-renderer"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
env_logger.workspace = true
gpui = { git = "https://github.com/zed-industries/zed" }
log.workspace = true
pollster.workspace   = true
thiserror.workspace  = true
the-editor-event = { path = "../the-editor-event" }
anyhow.workspace = true
fontdb = "0.12"
