[package]
name              = "the-editor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "the-editor"
path = "main.rs"

[features]
integration   = [  ]
unicode-lines = [ "ropey/unicode_lines" ]

[dependencies]
anyhow.workspace                   = true
ropey.workspace                    = true
smartstring.workspace              = true
unicode-general-category.workspace = true
unicode-segmentation.workspace     = true
unicode-width.workspace            = true

the-editor-renderer = { path = "../the-editor-renderer" }
the-editor-stdx     = { path = "../the-editor-stdx" }
bitflags = "2.4"
