[package]
name              = "the-editor"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "the-editor"
path = "main.rs"

[features]
integration   = [  ]
unicode-lines = [ "ropey/unicode_lines" ]

[dependencies]
agent-client-protocol.workspace    = true
anyhow.workspace                   = true
arc-swap                           = "1.7.1"
async-trait.workspace              = true
bitflags                           = "2.4"
chardetng.workspace                = true
chrono                             = { default-features = false, features = [ "alloc", "clock", "std" ], version = "0.4" }
clap.workspace                     = true
crossterm.workspace                = true
encoding_rs.workspace              = true
fern.workspace                     = true
foldhash.workspace                 = true
futures-executor.workspace         = true
futures-util.workspace             = true
globset.workspace                  = true
ignore.workspace                   = true
imara-diff.workspace               = true
indexmap.workspace                 = true
kstring.workspace                  = true
log.workspace                      = true
notify.workspace                   = true
nucleo.workspace                   = true
once_cell.workspace                = true
parking_lot.workspace              = true
regex                              = "1"
ropey.workspace                    = true
serde.workspace                    = true
serde_json.workspace               = true
slotmap.workspace                  = true
smallvec.workspace                 = true
smartstring.workspace              = true
tempfile.workspace                 = true
thiserror.workspace                = true
tokio.workspace                    = true
tokio-stream.workspace             = true
tokio-util.workspace               = true
toml.workspace                     = true
tree-house.workspace               = true
unicode-general-category.workspace = true
unicode-segmentation.workspace     = true
unicode-width.workspace            = true
url.workspace                      = true

grep-regex    = "0.1.13"
grep-searcher = "0.1.14"

the-editor-event     = { path = "../the-event" }
the-editor-loader    = { path = "../the-loader" }
the-editor-lsp-types = { path = "../the-lsp-types" }
the-editor-parsec    = { path = "../the-parsec" }
the-editor-renderer  = { path = "../the-renderer" }
the-editor-stdx      = { path = "../the-stdx" }
the-terminal         = { path = "../the-terminal" }
the-editor-vcs       = { features = [ "git" ], path = "../the-vcs" }

[target.'cfg(unix)'.dependencies]
libc   = "0.2"
rustix = { features = [ "fs" ], version = "1.0" }

[dev-dependencies]
quickcheck = { default-features = false, version = "1" }
