[package]
name              = "the-editor-event"
edition.workspace = true
license.workspace = true
version.workspace = true
[lints]
workspace = true


[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace           = true
foldhash.workspace         = true
futures-executor.workspace = true
hashbrown.workspace        = true
log.workspace              = true
once_cell.workspace        = true
parking_lot                = { features = [ "hardware-lock-elision" ], workspace = true }
tokio.workspace            = true

[features]
integration_test = [  ]
