[package]
name              = "the-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = [ "staticlib" ]
path       = "lib.rs"

[dependencies]
ropey.workspace      = true
serde_json.workspace = true
swift-bridge         = "0.1"
the-config           = { path = "../the-config" }
the-default          = { path = "../the-default" }
the-lib              = { features = [ "runtime-loader" ], path = "../the-lib" }
the-lsp              = { path = "../the-lsp" }
the-loader           = { path = "../the-loader" }
the-vcs              = { path = "../the-vcs", features = [ "diff", "git", "jj" ] }

[build-dependencies]
swift-bridge-build = "0.1"
