[package]
name              = "the-lib"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
ropey.workspace       = true
smallvec.workspace    = true
smartstring.workspace = true
the-core              = { path = "../the-core" }
the-stdx              = { path = "../the-stdx" }
thiserror.workspace   = true
tracing.workspace     = true
tree-house.workspace  = true
parking_lot.workspace  = true
nucleo.workspace = true
imara-diff.workspace = true

[dev-dependencies]
divan = "0.1.21"
quickcheck = { default-features = false, version = "1" }


[[bench]]
harness = false
name    = "transaction"
