[package]
name              = "the-loader"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
cc                   = "1"
etcetera.workspace   = true
eyre.workspace       = true
serde.workspace      = true
tempfile.workspace   = true
the-stdx             = { path = "../the-stdx" }
threadpool           = "1.0"
toml.workspace       = true
tracing.workspace    = true
tree-house.workspace = true

[lints]
workspace = true
