[package]
name              = "the-lsp"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
ropey.workspace      = true
serde.workspace      = true
serde_json.workspace = true
the-lib              = { path = "../the-lib" }
thiserror.workspace = true
tracing.workspace   = true

[lints]
workspace = true
