[package]
name              = "the-editor-renderer"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace     = true
bytemuck.workspace   = true
env_logger.workspace = true
fontdb               = "0.12"
glyphon              = "0.9"
log.workspace        = true
pollster.workspace   = true
thiserror.workspace  = true
wgpu.workspace       = true
winit.workspace      = true

the-editor-event = { path = "../the-event" }
