[package]
name              = "the-editor-renderer"
edition.workspace = true
license.workspace = true
version.workspace = true
include           = [ "**/*.rs", "*.wgsl" ]
[lints]
workspace = true


[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace     = true
bytemuck.workspace   = true
env_logger.workspace = true
fontdb               = "0.12"
glyphon              = "0.9"
log.workspace        = true
pollster.workspace   = true
resvg                = "0.44"
thiserror.workspace  = true
tiny-skia            = "0.11"
wgpu.workspace       = true
winit.workspace      = true
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "webp",
  "bmp",
  "ico",
  "tiff",
] }

the-editor-event = { path = "../the-event" }
