[package]
name              = "the-stdx"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bitflags.workspace             = true
dunce.workspace                = true
etcetera.workspace             = true
eyre.workspace                 = true
once_cell.workspace            = true
parking_lot.workspace          = true
regex-automata.workspace       = true
regex-cursor.workspace         = true
ropey.workspace                = true
unicode-segmentation.workspace = true
which.workspace                = true

[target.'cfg(windows)'.dependencies]
windows-sys = { features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
], version = "0.60" }

[target.'cfg(unix)'.dependencies]
rustix = { features = [ "fs" ], version = "1.0" }

[dev-dependencies]
tempfile.workspace = true
