[package]
name              = "the-term"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "the-editor"
path = "main.rs"

[dependencies]
the-lib      = { path = "../the-lib", features = ["runtime-loader"] }
the-loader   = { path = "../the-loader" }
the-default = { path = "../the-default" }
crossterm.workspace = true
eyre.workspace      = true
ropey.workspace     = true

[lints]
workspace = true
