[package]
name              = "the-term"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "the-editor"
path = "main.rs"

[dependencies]
clap.workspace      = true
crossterm.workspace = true
eyre.workspace      = true
ropey.workspace     = true
the-config          = { path = "../the-config" }
the-default         = { path = "../the-default" }
the-lib             = { features = [ "runtime-loader" ], path = "../the-lib" }
the-loader          = { path = "../the-loader" }

[lints]
workspace = true
