[package]
name              = "the-term"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "the-editor"
path = "main.rs"

[dependencies]
clap.workspace      = true
crossterm.workspace = true
eyre.workspace      = true
ratatui.workspace   = true
ropey.workspace     = true
serde_json.workspace = true
the-config          = { path = "../the-config" }
the-default         = { path = "../the-default" }
the-lib             = { features = [ "runtime-loader" ], path = "../the-lib" }
the-lsp             = { path = "../the-lsp" }
the-loader          = { path = "../the-loader" }
the-runtime         = { path = "../the-runtime" }
the-vcs             = { path = "../the-vcs", features = [ "diff", "git" ] }

[lints]
workspace = true
