[package]
name = "the-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
alacritty_terminal = "0.25"
anyhow.workspace = true
itertools = "0.14"
log.workspace = true
parking_lot.workspace = true
the-editor-event = { path = "../the-event" }
tokio.workspace = true
