[package]
name = "the-test"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
the-dispatch = { path = "../the-dispatch" }

[features]
default = ["dynamic-registry", "cow-handlers"]
dynamic-registry = ["the-dispatch/dynamic-registry"]
cow-handlers = ["the-dispatch/cow-handlers"]
