[package]
name              = "the-editor-vcs"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace      = true
arc-swap.workspace    = true
imara-diff.workspace  = true
log.workspace         = true
parking_lot.workspace = true
ropey.workspace       = true
tokio.workspace       = true

gix = { default-features = false, features = [
  "attributes",
  "status",
], optional = true, version = "0.73.0" }

the-editor-event = { path = "../the-event" }

[features]
git = [ "gix" ]

[dev-dependencies]
tempfile.workspace = true
