[package]
name = "the-vcs"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
arc-swap = "1.8.0"
eyre.workspace = true
imara-diff.workspace = true
log = "0.4"
ropey.workspace = true

[features]
default = []
git = []
diff = []

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
